--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": ">=7.2",
         "sonata-project/admin-bundle": "^2.2.2 || ^3.0",
         "symfony/dependency-injection": "^2.2 || ^3.0",
         "doctrine/dbal": "^2.2 || ^3.0",
