--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": ">=7.2",
         "sonata-project/admin-bundle": "^2.2.2 || ^3.0 || ^4.29",
-        "symfony/dependency-injection": "^2.2 || ^3.0",
+        "symfony/dependency-injection": "^2.2 || ^3.0 || ^7.0",
         "doctrine/dbal": "^2.2 || ^3.0",
         "symfony/security-acl": "^3.0",
         "symfony/security-core": "^3.4 || ^4.4"
