--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "symfony/dependency-injection": "^2.2 || ^3.0 || ^7.0",
         "doctrine/dbal": "^2.2 || ^3.0",
         "symfony/security-acl": "^3.0",
-        "symfony/security-core": "^3.4 || ^4.4"
+        "symfony/security-core": "^3.4 || ^4.4 || ^7.0"
     },
     "autoload": {
         "psr-4": {
